--- a/TestCaseManagement.Api.csproj
+++ b/TestCaseManagement.Api.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\TestCaseManagementService\TestCaseManagementService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Implementations\" />
+  </ItemGroup>
+
 </Project>
