--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MONITH;Database=TestManagementSystemACBD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=MONITH;Database=Blaze;User Id=sa;Password=@Monith4444;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
